More contrast fixes

--- a/themes/learn-plasma/src/index.styl
+++ b/themes/learn-plasma/src/index.styl
@@ -77,15 +77,13 @@ h1, .h1
   font-size 2.57813rem
 default:focus
   color #5c5c5c !important
-a
-  color #116cff
 
 // Links
 a
-  color #50a1ff
+  color #116cff
   transition .2s linear
 a:hover, a:focus
-  color #50a1ff
+  color #116cff
   text-decoration none
   outline 0
 
@@ -292,7 +290,7 @@ a:hover, a:focus
 .navbar-dark .btn-menu,
 .navbar-stick-dark.stick .navbar-toggler,
 .navbar-stick-dark.stick .btn-menu
-  color rgba(117,117,117,0.8)
+  color #616161
 .navbar-toggler,
 .btn-menu
   padding .25rem .75rem
